...
                        android:textColor="@color/gray"
                        android:textColorHint="@color/medium_gray"
                        android:fontFamily="@font/rubik_regular"
                        android:inputType="textEmailAddress"
                        />
                    <EditText
                        android:id="@+id/first"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="60dp"
...
                        android:textColor="@color/gray"
                        android:textColorHint="@color/medium_gray"
                        android:fontFamily="@font/rubik_regular"
                        android:inputType="textPersonName"
                        />
                    <EditText
                        android:id="@+id/last"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="60dp"
...
                        android:textColor="@color/gray"
                        android:textColorHint="@color/medium_gray"
                        android:fontFamily="@font/rubik_regular"
                        android:inputType="textPersonName"
                        />
                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="60dp"
...
                        android:textColor="@color/gray"
                        android:textColorHint="@color/medium_gray"
                        android:fontFamily="@font/rubik_regular"
                        android:inputType="phone"
                        />
                    <EditText
                        android:id="@+id/major"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="60dp"
...
                        android:textColor="@color/gray"
                        android:textColorHint="@color/medium_gray"
                        android:fontFamily="@font/rubik_regular"
                        android:inputType="textShortMessage"
                        />
                    <EditText
                        android:id="@+id/year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="60dp"
...
                        android:textColor="@color/gray"
                        android:textColorHint="@color/medium_gray"
                        android:fontFamily="@font/rubik_regular"
                        android:inputType="number"
                        />
                    <EditText
                        android:id="@+id/bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="60dp"
...
                        android:textColor="@color/gray"
                        android:textColorHint="@color/medium_gray"
                        android:fontFamily="@font/rubik_regular"
                        android:inputType="textLongMessage"
                        />
                    <Button
                        android:id="@+id/submit_event"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/update_profile_activity"
...
