<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradients"
    tools:context=".Activities.UserHomeActivities.LoginLogoutActivities.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo_white"
        app:layout_constraintBottom_toTopOf="@+id/username_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo"
        android:hint="@string/email"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/transparent_white"
        android:fontFamily="@font/rubik_light_italic"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="159dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/username_text"
        android:hint="@string/password"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/transparent_white"
        android:fontFamily="@font/rubik_light_italic"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:enabled="true"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/login"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="50dp"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_button"/>


    <TextView
        android:id="@+id/bad_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="60dp"
        android:fontFamily="@font/rubik_bold_italic"
        android:gravity="center_horizontal"
        android:text="@string/invalid_login"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_button"
         />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="start"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="@color/transparent"
        android:enabled="true"
        android:fontFamily="@font/rubik_medium_italic"
        android:text="@string/signup_underline"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loading"
        style="?android:attr/borderlessButtonStyle"
        />


</androidx.constraintlayout.widget.ConstraintLayout>