<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.UserHomeActivities.SignUpActivities.SecondSignUpFragment">

    <EditText
        android:id="@+id/first_name_text"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/fname"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/transparent_white"
        android:fontFamily="@font/rubik_light_italic"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/last_name_text"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/lname"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/transparent_white"
        android:fontFamily="@font/rubik_light_italic"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/phone_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="159dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/first_name_text"
        android:hint="@string/phone"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/transparent_white"
        android:fontFamily="@font/rubik_light_italic"
        android:inputType="phone"
        />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="63dp"
        android:layout_height="39dp"
        android:layout_gravity="start"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="210dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/white_arrow"
        android:rotation="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_text"
        />

    <ImageButton
        android:id="@+id/continue_button"
        android:layout_width="63dp"
        android:layout_height="39dp"
        android:layout_gravity="start"
        android:layout_marginLeft="210dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/white_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_text"
        />

    <ImageButton
        android:id="@+id/continue_button_transparent"
        android:layout_width="63dp"
        android:layout_height="39dp"
        android:layout_gravity="start"
        android:layout_marginLeft="210dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/transparent_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_text"
        />
</androidx.constraintlayout.widget.ConstraintLayout>