...
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/gray"
        />

    <TextView
        android:id="@+id/invitations_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        android:text="@string/invitations"
        android:fontFamily="@font/rubik_medium"
        android:textSize="28dp"
...
                android:fontFamily="@font/rubik_medium_italic"
                android:textSize="15sp"
                android:text="@string/view_history"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/update_profile_button"
                android:textAllCaps="false"
                android:layout_width="160dp"
                android:layout_height="112dp"
                android:paddingTop="28dp"
                android:layout_marginLeft="20dp"
                android:paddingLeft="14dp"
...
                android:fontFamily="@font/rubik_medium_italic"
                android:textSize="15sp"
                android:text="@string/update_profile"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/logout_button"
                android:textAllCaps="false"
                android:layout_width="160dp"
                android:layout_height="112dp"
                android:paddingTop="28dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
...
